# gpt-brain-web-mcp

./: .env.example  .gitignore  README.md  doctor.ps1  doctor.sh  install.ps1  install.sh  pyproject.toml
config/: model_modes.yaml
docs/: architecture.md  one_click_install.md  product_policy.md  release_acceptance.md  security.md  troubleshooting.md
examples/: codex_config.toml  sample_outputs.md  sample_requests.md
scripts/: inspect_db.py  install_codex_config.py  live_validate.py  login.py  smoke_mcp.py  smoke_web_login.py
src/gpt_brain_web_mcp/: __init__.py  cli.py  codex_config.py  config.py  installer.py  jobs.py  logging_utils.py  models.py  product_policy.py  redaction.py  server.py  store.py  tools.py
src/gpt_brain_web_mcp/backends/: __init__.py  base.py  mock.py  openai_api_optional.py  web_chatgpt.py
src/gpt_brain_web_mcp/config_defaults/: selectors.yaml
src/gpt_brain_web_mcp/prompts/: ask_brain.md  (+3 more)
tests/: conftest.py  test_async_ask_jobs.py  test_browser_manager_mock.py  test_chatgpt_page_contracts.py  test_cli_smoke.py  test_codex_config_merge.py  test_conversation_manager.py  test_conversation_strategy.py  test_doctor.py  test_install_dry_run.py  test_jobs.py  test_login_state.py  test_mcp_tools_mock.py  test_model_picker_mock.py  test_pro_gating.py  test_product_policy.py  test_project_fail_closed.py  test_project_management.py  test_redaction.py  test_remote_delete_guard.py  test_research_mode_backend.py  test_result_extractor_mock.py  test_retention_cleanup.py  test_store.py  test_tier_fallback.py
tests/live/: test_chatgpt_web_live.py
(+12 files in other folders)
