[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "gpt-brain-web-mcp"
version = "0.1.0"
description = "ChatGPT Web Brain Gateway MCP using a managed dedicated Playwright browser profile"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GPT Brain Web MCP contributors" }]
dependencies = [
  "mcp>=1.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["playwright>=1.45"]

[project.scripts]
gpt-brain-web = "gpt_brain_web_mcp.cli:main"
gpt-brain-web-mcp = "gpt_brain_web_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_brain_web_mcp"]
include = ["src/gpt_brain_web_mcp/config_defaults/*.yaml"]
